--- a/Libroso_file.ipynb
+++ b/Libroso_file.ipynb
@@ -109,6 +109,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header = 'filename chroma_stft rmse spectral_centroid spectral_bandwidth rolloff zero_crossing_rate'\n",
+    "for i in range(1, 21):\n",
+    "    header += f' mfcc{i}'\n",
+    "header += ' label'\n",
+    "header = header.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Writing the img files into a CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('data.csv', 'w', newline='')\n",
+    "with file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(header)\n",
+    "genres = 'blues classical country disco hiphop jazz metal pop reggae rock'.split()\n",
+    "for g in genres:\n",
+    "    for filename in os.listdir(f'./data/genres/{g}'):\n",
+    "        songname = f'./data/genres/{g}/{filename}'\n",
+    "        rmse = librosa.feature.rms(y=y)[0]\n",
+    "        y, sr = librosa.load(songname, mono=True, duration=30)\n",
+    "        chroma_stft = librosa.feature.chroma_stft(y=y, sr=sr)\n",
+    "        spec_cent = librosa.feature.spectral_centroid(y=y, sr=sr)\n",
+    "        spec_bw = librosa.feature.spectral_bandwidth(y=y, sr=sr)\n",
+    "        rolloff = librosa.feature.spectral_rolloff(y=y, sr=sr)\n",
+    "        zcr = librosa.feature.zero_crossing_rate(y)\n",
+    "        mfcc = librosa.feature.mfcc(y=y, sr=sr)\n",
+    "        to_append = f'{filename} {np.mean(chroma_stft)} {np.mean(rmse)} {np.mean(spec_cent)} {np.mean(spec_bw)} {np.mean(rolloff)} {np.mean(zcr)}'    \n",
+    "        for e in mfcc:\n",
+    "            to_append += f' {np.mean(e)}'\n",
+    "        to_append += f' {g}'\n",
+    "        file = open('data.csv', 'a', newline='')\n",
+    "        with file:\n",
+    "            writer = csv.writer(file)\n",
+    "            writer.writerow(to_append.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
